# mytorch

./: .gitignore  README.md  pyproject.toml
examples/: train_mnist.py
mytorch/: __init__.py  tensor.py
mytorch/autograd/: __init__.py  context.py  function.py
mytorch/autograd/functional/: mul.py  sum.py
mytorch/autograd/functions/: __init__.py  add.py  logsoftmax.py  loss.py  matmul.py  mul.py  relu.py  reshape.py  sum.py  transpose.py
mytorch/mytorch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mytorch/nn/: __init__.py  init.py  module.py
mytorch/nn/modules/: __init__.py  flatten.py  linear.py  loss.py  relu.py  reshape.py  transpose.py
mytorch/optim/: __init__.py  sgd.py
mytorch/utils/: __init__.py
tests/: backward.py  cross_entropy_loss.py  device.py  get_set.py  matmul.py  mlp.py  reshape.py  sum.py  to.py
