[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mytorch"
version = "0.1.0"
description = "A custom neural network framework with autograd functionality"
authors = [
    { name = "Harvey Dam", email = "harvey.dam@utah.edu" },
]
dependencies = [
    "torch>=2.0.0"
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = { find = { include = ["mytorch", "mytorch.*"] } }